--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "dizagn/utm-composer",
     "description": "Template to create website using UTM framework and composer",
     "type": "project",
+    "licence": " BSD-3-Clause",
     "keywords": ["framework", "mvc", "utm", "microframework"],
     "authors": [
         {
@@ -10,6 +11,7 @@
             "homepage": "https://www.dizagn.com"
         }
     ],
+
     "repositories": [
         {
             "type": "vcs",
